# forecasting_electricity

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  forecasts.csv  forecasts_past.csv  main.py  pyproject.toml
.github/workflows/: deploy.yml
data/: Electricity consumption.csv  Weather data.csv
data_processor/: __init__.py  builder.py  processor.py
forecasting/: __init__.py  forecaster.py
notebooks/: 15min_demand_energy_model.ipynb  baseline_sarima_consumption.ipynb  daily_consumption_model.ipynb  question_answering.ipynb
notebooks/models/: energy_model.keras  feature_list.pkl  feature_scaler.pkl  target_scaler.pkl
train/: __init__.py  demand_model_trainer.py  model_trainer.py
utils/: __init__.py
utils/data/: load_data.py  process_load_data.py  process_weather_data.py
utils/inference_evaluation/: model_metric_evaluation.py  predict_ci.py
utils/profiling_comsumption/: __init__.py  cluster_analyzer.py  data_preparator.py  electricity_profile_analyzer.py  vizualizer.py
