[tool.poetry]
name = "forecasting-electricity"
version = "0.1.0"
description = ""
authors = ["chadrack mayamba"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^3.0.1"
numpy = "^2.4.2"
seaborn = "^0.13.2"
matplotlib = "^3.10.8"
scikit-learn = "^1.8.0"
scipy = "^1.17.1"
statsmodels = "^0.14.6"
keras = "^3.13.2"
tensorflow = "^2.20.0"
joblib = "^1.5.3"
ipykernel = "^7.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
